--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@
 *.zip
 *.dcm
 CAMRESULTS
-CALSSIFICATIONRESULTS
+CLASSIFICATIONRESULTS
 CAMRESULTS/*
-CALSSIFICATIONRESULTS/*
+CLASSIFICATIONRESULTS/*
